--- a/Common_application.properties
+++ b/Common_application.properties
@@ -1,3 +1,4 @@
+# Enable Eureka client
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8762/eureka/
