--- a/user-service.properties
+++ b/user-service.properties
@@ -1,4 +1,4 @@
-
+# configuations to database
 spring.datasource.url=jdbc:mysql://localhost:3306/microarc?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=March@m299
