--- a/user-service.properties
+++ b/user-service.properties
@@ -5,3 +5,9 @@ spring.datasource.password=March@m299
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+logging.level.root=INFO
+logging.level.com.hospital.demo=DEBUG
+logging.file.name=logs/user-service.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
