--- a/user-service.properties
+++ b/user-service.properties
@@ -8,6 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.root=INFO
 logging.level.com.hospital.demo=DEBUG
-logging.file.name=logs/user-service.log
+logging.file.name=C:\logs\user-service.log\logs\user-service.log
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
