--- a/user-service.properties
+++ b/user-service.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+#Configurations to Logging
 logging.level.root=INFO
 logging.level.com.hospital.demo=DEBUG
 logging.file.name=C:\logs\user-service.log\logs\user-service.log
